Adding react sample with some pages using inertia with react

--- a/InertiaAspNetCore.MVC.React/Views/Home/Index.cshtml
+++ b/InertiaAspNetCore.MVC.React/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Welcome to Inertia with React sample</h1>
+    <a asp-action="Counter">Display counter in react page</a>
+    <a asp-action="DisplayUser" asp-route-id="1">Display user information form dynamic data</a>
+    <a asp-action="EditUser" asp-route-id="2">Display user edit form with dynamic data</a>
 </div>
